--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,13 @@
     --grayish-blue: #a3a5ae;
     --very-light-gray: #fafafa;
 
-    /* - Family: [Poppins](https://fonts.google.com/specimen/Poppins)
-- Weights: 200, 400, 600 */
+    --poppins: "Poppins", sans-serif;
 }
 
 body{
     min-height: 100vh;
     background-image: url(../images/favicon-32x32.png);
+    font-family: var(--poppins);
 }
 
 .main{
@@ -33,31 +33,74 @@ body{
 }
 
 .section{
+    max-width: 425px;
+    margin: 0 auto;
     margin-bottom: 4em;
 }
 
 .section__title{
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     display: flex;
     flex-direction: column;
-    font-weight: normal;
+    font-weight: 200;
     margin-bottom: 1em;
 }
+
 .bold{
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .section__paragraph{
-    font-size: 1rem;
+    color: var(--grayish-blue);
 }
 
 .section__articles{
     width: 100%;
+    display: grid;
     grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 1.5em;
 }
 
 .article{
-    width: 375px;
-    border-radius: 10px;
-    box-shadow: 0 5px 10px;
+    width: 320px;
+    border-radius: 5px;
+    padding: 1.5em;
+    box-shadow: 0 10px 20px -15px;
+    border-top: 5px solid var(--cyan);
+
+    display: flex;
+    flex-direction: column;
+}
+
+.article:nth-child(2){
+    border-color: var(--red);
+}
+
+.article:nth-child(3){
+    border-color: var(--orange);
+}
+
+.article:nth-child(4){
+    border-color: var(--blue);
+}
+
+.article__title {
+    font-size: 1.3rem;
+    margin-bottom: .7em;
+}
+.article__paragraph {
+    color: var(--grayish-blue);
+}
+
+.article__icon {
+    width: 70px;
+    height: 70px;
+    margin-top: 2em;
+    align-self: flex-end;
+}
+
+.icon{
+    display: block;
+    width: 100%;
 }
