--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ body{
     max-width: 425px;
     margin: 0 auto;
     margin-bottom: 4em;
+    text-align: center;
+    text-wrap: balance;
 }
 
 .section__title{
@@ -59,6 +61,7 @@ body{
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
+    justify-content: center;
     gap: 1.5em;
 }
 
@@ -103,4 +106,54 @@ body{
 .icon{
     display: block;
     width: 100%;
+}
+
+@media (width >= 768px) {
+
+    .section__title{
+        font-size: 2rem;
+    }
+    
+    .section__paragraph{
+        font-size: 1rem;
+    }
+
+    .section__articles{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        justify-content: center;
+    }
+
+
+}
+
+@media (width >= 1084px) {
+
+    .section__articles{
+        width: 100%;
+        margin: 0 auto;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .article:nth-child(1){
+        grid-column: 1/3;
+        grid-row: 2/4;
+    }
+    
+    .article:nth-child(2){
+        grid-column: 3/5;
+        grid-row: 1/3;
+    }
+    
+    .article:nth-child(3){
+        grid-column: 3/5;
+        grid-row: 3/-1;
+    }
+    
+    .article:nth-child(4){
+        grid-column: 5/-1;
+        grid-row: 2/4;
+    }
+
 }
